Ensured theres spacing between add bookmark fields

--- a/src/app/bookmark/bookmark-editor/bookmark-editor.component.scss
+++ b/src/app/bookmark/bookmark-editor/bookmark-editor.component.scss
@@ -5,3 +5,7 @@ mat-card-content {
 mat-form-field {
   width: 100%;
 }
+
+mat-form-field:not(:last-child) {
+  margin-bottom: 1rem;
+}
